--- a/my_bootstrap_dashboard.html
+++ b/my_bootstrap_dashboard.html
@@ -13,13 +13,7 @@
       <div class="row">
         <textarea cols="200" rows="20" class="form-control">                                                      
 
--------------------------------------------------------------------------------------------------------------------------------------------------------------------- 
-
-
-
-
-
-
+------------------------------------------------------------------------------------------------------------------- 
 
 <!doctype html>
 <html lang="en">
@@ -45,9 +39,10 @@
             justify-content: center;
             align-items: center;
         }
-        @media screen  and (max-width: 991px){
-            #short_sidebar{ display: none !important; }
-        }
+        /* RESPONSIVE START */
+        @media screen  and (max-width: 991px){ #short_sidebar{ display: none !important; } }
+        @media screen  and (min-width: 991px){ .btn-close{ display: none; } }
+        /* RESPONSIVE END */
         /* LINK ACTIVE HOVER START */
         .dropdown-item.active, .dropdown-item:active {
             color: blue;
@@ -129,6 +124,10 @@
             padding: 0px 5px !important;
         }
         /* TABLE END */
+        /* FORM START */
+        form input{ margin-top: 10px; margin-bottom: 20px; }
+        .myForm{ padding: 20px 20px; box-shadow: 0px 0px 5px gray; }
+        /* FORM END */
     </style>
 
   </head>
@@ -138,7 +137,7 @@
         <div class="container-fluid">
           <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-              <a class="navbar-brand fw-bold" >
+              <a class="navbar-brand fw-bold" href="#">
                     <i class="bi bi-house-fill fs-4 pe-2"></i>
                     <!-- <img width="25" height="25" class="d-inline-block align-text-top me-2 rounded bg-dark"> -->
                     My Dashboard
@@ -149,28 +148,10 @@
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 ps-5 pb-5">
 
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">
+                  <a class="nav-link active" aria-current="page" href="./dashboard.html">
                     <i class="bi bi-caret-right-fill"></i>
                     Dashboard
                 </a>
-                </li>
-                <li class="nav-item"> 
-                    <a class="nav-link " href="#">
-                        <i class="bi bi-caret-right-fill"></i>
-                        Index
-                    </a> 
-                </li>
-                <li class="nav-item"> 
-                    <a class="nav-link " href="#">
-                        <i class="bi bi-caret-right-fill"></i>
-                        Create
-                    </a> 
-                </li>
-                <li class="nav-item"> 
-                    <a class="nav-link " href="#">
-                        <i class="bi bi-caret-right-fill"></i>
-                        Edit
-                    </a> 
                 </li>
 
                 <li class="nav-item dropdown">
@@ -179,24 +160,24 @@
                   </a>
                   <ul class="dropdown-menu border-0 ">
                     <li>
-                        <a class="dropdown-item " href="#">
+                        <a class="dropdown-item " href="./index2.html">
                             <i class="bi bi-caret-right-fill"></i>
                             Index
                         </a>
                     </li>
                     <li>
-                        <a class="dropdown-item " href="#">
+                        <a class="dropdown-item " href="./create.html">
                             <i class="bi bi-caret-right-fill"></i>
                             Create
                         </a>
                     </li>
-                    <li>
-                        <a class="dropdown-item " href="#">
-                            <i class="bi bi-caret-right-fill"></i>
-                            Edit
-                        </a>
-                    </li>
                   </ul>
+                </li>
+                <li class="nav-item"> 
+                    <a class="nav-link " href="./demo.html">
+                        <i class="bi bi-caret-right-fill"></i>
+                        Demo
+                    </a> 
                 </li>
     
               </ul>
@@ -216,7 +197,7 @@
             <!-- <span class="navbar-toggler-icon"></span> -->
             <i class="bi bi-list fs-1"></i>
           </a>
-          <a class="navbar-brand fw-bold" >
+          <a class="navbar-brand fw-bold" href="#">
             <i class="bi bi-house-fill fs-4 pe-2"></i>
             <!-- <img width="25" height="25" class="d-inline-block align-text-top me-2 rounded bg-dark"> -->
             My Dashboard
@@ -229,7 +210,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" >Home</a>
+                <a class="nav-link " aria-current="page" href="./index.html">Home</a>
               </li>
 
               <li class="nav-item dropdown">
@@ -237,10 +218,10 @@
                   Arman 
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" >Profile</a></li>
-                  <li><a class="dropdown-item active" >Settings</a></li>
+                  <li><a class="dropdown-item " href="./profile.html">Profile</a></li>
+                  <li><a class="dropdown-item " href="./setting.html">Settings</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" >Logout</a></li>
+                  <li><a class="dropdown-item" href="./index.html">Logout</a></li>
                 </ul>
               </li>
             </ul>
@@ -252,11 +233,8 @@
         </div>
     </nav>
 
-    <a class="navbar-toggler" data-bs-toggle="offcanvas" href="#offcanvasNavbar" role="button" aria-controls="offcanvasNavbar">
-        <div id="short_sidebar" class="bg-light">
-                <i class="bi bi-caret-right-fill"></i>
-        </div>
-    </a>
+    <!-- HOVER-SECTION -->
+    <div id="short_sidebar" class="bg-light"> <i class="bi bi-caret-right-fill"></i> </div>
 
     <div class="container-fluid py-3 ps-md-5 pe-md-4">
 
@@ -350,7 +328,51 @@
 
         </div>
 
-        <!-- DASHBOARD INDEX -->
+        <!-- CREATE CONTENT -->
+        <div class="row justify-content-center pb-4">
+            <div class="col-md-6">
+                <style>
+                    form input{
+                        margin-top: 10px;
+                        margin-bottom: 20px;
+                    }
+                    .myForm{
+                        padding: 20px 20px;
+                        box-shadow: 0px 0px 5px gray;
+                    }
+                </style>
+                <form action="" method="" class="card myForm">
+                    <div class="row">
+
+                        <div class="col-12 text-center fs-3 pb-3 text-decoration-underline">
+                            My Form
+                        </div>
+                        <div class="col-md-6">
+                            <label>Name :</label>
+                            <input type="text" name="" class="form-control">
+                        </div>
+                        <div class="col-md-6">
+                            <label>Mobile :</label>
+                            <input type="text" name="" class="form-control">
+                        </div>
+                        <div class="col-md-6">
+                            <label>Name :</label>
+                            <input type="text" name="" class="form-control">
+                        </div>
+                        <div class="col-md-6">
+                            <label>Mobile :</label>
+                            <input type="text" name="" class="form-control">
+                        </div>
+                        <div class="col-12 text-center">
+                            <button type="" class="btn btn-success px-5">Submit</button>
+                        </div>
+
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <!-- INDEX CONTENT -->
         <div class="row justify-content-center pb-4">
             <div class="col-12">
                 <div class="armanTableContainer bg-white rounded">
@@ -362,7 +384,7 @@
                                     <th scope="col">First</th>
                                     <th scope="col">Last</th>
                                     <th scope="col">Handle</th>
-                                    <th scope="col" class="text-center" width="100">Action</th>
+                                    <th scope="col" class="text-center" width="150">Action</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -801,62 +823,116 @@
             </div>
         </div>
 
-        <!-- DASHBOARD CREATE -->
-        <div class="row justify-content-center pb-4">
-            <div class="col-md-6">
-                <style>
-                    form input{
-                        margin-top: 10px;
-                        margin-bottom: 20px;
-                    }
-                    .myForm{
-                        padding: 20px 20px;
-                        box-shadow: 0px 0px 5px gray;
-                    }
-                </style>
-                <form action="" method="" class="card myForm">
-                    <div class="row">
+        <!-- LOGIN CONTENT -->
+        <div class="row justify-content-center">
+          <div class="col-lg-4 col-md-6 d-flex" style="height: 100vh;">
+              <form action="" method="" class="card myForm align-self-center">
+                  <div class="row">
 
-                        <div class="col-12 text-center fs-3 pb-3 text-decoration-underline">
-                            My Form
-                        </div>
-                        <div class="col-md-6">
-                            <label>Name :</label>
-                            <input type="text" name="" class="form-control">
-                        </div>
-                        <div class="col-md-6">
-                            <label>Mobile :</label>
-                            <input type="text" name="" class="form-control">
-                        </div>
-                        <div class="col-md-6">
-                            <label>Name :</label>
-                            <input type="text" name="" class="form-control">
-                        </div>
-                        <div class="col-md-6">
-                            <label>Mobile :</label>
-                            <input type="text" name="" class="form-control">
-                        </div>
-                        <div class="col-12 text-center">
-                            <button type="" class="btn btn-success px-5">Submit</button>
-                        </div>
+                      <div class="col-12 text-center pb-md-5 py-2">
+                        <a class="navbar-brand fw-bold fs-4" href="./index.html">
+                          <i class="bi bi-house-fill fs-4 pe-2"></i>
+                          <!-- <img width="25" height="25" class="d-inline-block align-text-top me-2 rounded bg-dark"> -->
+                          Company Name
+                        </a>
+                      </div>
+                      <div class="col-12">
+                          <label>Email :</label>
+                          <input type="email" name="" class="form-control">
+                      </div>
+                      <div class="col-12">
+                          <label>Password :</label>
+                          <input type="password" name="" class="form-control">
+                      </div>
+                      <div class="col-12 text-center">
+                          <button type="" class="btn btn-primary px-5">Login</button>
+                      </div>
+                      <div class="col-12 text-center pt-2">
+                        <a href="" class="text-decoration-none">Forgotten password?</a>
+                      </div>
+                      <div class="col-12 text-center">
+                        <hr>
+                      </div>
+                      <div class="col-12 text-center">
+                        Don't have an account?
+                      </div>
+                      <div class="col-12 text-center">
+                        <a href="./register.html" class="btn btn-outline-success fw-bold">Register Now</a>
+                      </div>
 
-                    </div>
-                </form>
-            </div>
+                  </div>
+              </form>
+          </div>
+        </div>
+
+        <!-- REGISTER CONTENT -->
+        <div class="row justify-content-center">
+          <div class="col-md-6 d-flex" style="height: 100vh;">
+              <form action="" method="" class="card myForm align-self-center">
+                  <div class="row">
+                      <div class="col-12 text-center pb-md-5 py-2">
+                        <a class="navbar-brand fw-bold fs-4" href="./index.html">
+                          <i class="bi bi-house-fill fs-4 pe-2"></i>
+                          <!-- <img width="25" height="25" class="d-inline-block align-text-top me-2 rounded bg-dark"> -->
+                          Company Name
+                        </a>
+                      </div>
+                      <div class="col-md-6">
+                          <label>Name :</label>
+                          <input type="text" name="" class="form-control">
+                      </div>
+                      <div class="col-md-6">
+                          <label>Email :</label>
+                          <input type="email" name="" class="form-control">
+                      </div>
+                      <div class="col-md-6">
+                          <label>Password :</label>
+                          <input type="password" name="" class="form-control">
+                      </div>
+                      <div class="col-md-6">
+                          <label>Confirm Password :</label>
+                          <input type="password" name="" class="form-control">
+                      </div>
+                      <div class="col-12 text-center">
+                          <button type="" class="btn btn-primary px-5">Register</button>
+                      </div>
+                      <div class="col-12 text-center">
+                        <hr>
+                      </div>
+                      <div class="col-12 text-center">
+                        Already Registered?
+                      </div>
+                      <div class="col-12 text-center">
+                        <a href="./login.html" class="btn btn-outline-success fw-bold">Login Now</a>
+                      </div>
+
+                  </div>
+              </form>
+          </div>
         </div>
 
     </div>
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    
+    <!-- OFFCANVAS HIDE & SHOW START -->
+    <script>
+      const hoverSection = document.querySelector('#short_sidebar');
+      const offcanvas = document.querySelector('.offcanvas');
+      let isHovered = false;
+      hoverSection.addEventListener('mouseenter', () => { isHovered = true; showOffcanvas(); });
+      offcanvas.addEventListener('mouseenter', () => { isHovered = true; showOffcanvas(); });
+      hoverSection.addEventListener('mouseleave', () => { isHovered = false; hideOffcanvas(); });
+      offcanvas.addEventListener('mouseleave', () => { isHovered = false; hideOffcanvas(); });
+      function showOffcanvas() { offcanvas.classList.add('show'); }
+      function hideOffcanvas() { if (!isHovered) { offcanvas.classList.remove('show'); } }
+    </script>
+    <!-- OFFCANVAS HIDE & SHOW END -->
+
   </body>
 </html>
 
-
-
-
-
-
--------------------------------------------------------------------------------------------------------------------------------------------------------------------- 
+-------------------------------------------------------------------------------------------------------------------
         </textarea>
       </div>
     </div>
