--- a/validation.html
+++ b/validation.html
@@ -28,6 +28,9 @@ $this->validate($request, [
 return back()->flash('status', 'Task was successful!')          
 return back()->with('status', 'Task was successful!')          
 
+<input id="title" type="text" value="{{ old('title') }}" name="title" class="@error('title') is-invalid @enderror">
+@error('title') <div class="alert alert-danger">{{ $message }}</div> @enderror
+        
 public function store(Request $request)
 {
     $validated = $request->validate([
@@ -54,11 +57,6 @@ public function store(Request $request)
     </div>
 @endif
 
-<input id="title" type="text" value="{{ old('title') }}" name="title" class="@error('title') is-invalid @enderror">
-@error('title')
-    <div class="alert alert-danger">{{ $message }}</div>
-@enderror
-          
         </textarea>
       </div>
     </div>
