--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                   <a href="./simple_multi_auth.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">simple_multi_auth</a>
                   <a href="./livewire.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Livewire</a>
                   <a href="./my_bootstrap_dashboard.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">my_bootstrap_dashboard</a>
+                  <a href="./one_form_submit_multiple_data_store.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">one_form_submit_multiple_data_store</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
