--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                   <a href="./livewire.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Livewire</a>
                   <a href="./my_bootstrap_dashboard.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">my_bootstrap_dashboard</a>
                   <a href="./one_form_submit_multiple_data_store.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">one_form_submit_multiple_data_store</a>
+                  <a href="./mcq.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">mcq</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
