--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                   <a href="./one_form_submit_multiple_data_store.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">one_form_submit_multiple_data_store</a>
                   <a href="./mcq.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">mcq</a>
                   <a href="./my_bootstrap_frontend.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">my_bootstrap_frontend</a>
+                  <a href="./vs_code.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">vs_code</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
