--- a/vs_code.html
+++ b/vs_code.html
@@ -12,7 +12,10 @@
     <div class="container pt-4">
       <div class="row">
         <textarea cols="200" rows="20" class="form-control">                                                      
-
+shift+alt+f  ->[auto indent]
+ctrl+/  ->[comment for all]
+shift+alt+down_arrow  ->[duplicate line or selected]
+alt+down_arrow ->[exchange this line]
         </textarea>
       </div>
     </div>
