--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                   <a href="./my_bootstrap_frontend.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">my_bootstrap_frontend</a>
                   <a href="./vs_code.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">vs_code</a>
                   <a href="./live_exam_js.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">live_exam_js</a>
+                  <a href="./fiverr.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Fiverr</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
