--- a/fiverr.html
+++ b/fiverr.html
@@ -14,6 +14,10 @@
         <textarea cols="200" rows="20" class="form-control">                                                      
 Fiverr Rules
 ---------------------------------------
+Don's Share Contact Information
+Don's blank delivery
+Don't rude behave
+Don't forget to share your experiance.
 Identity == NID info
 Profile Picture == Smily Face
 Name == NID Name
@@ -70,7 +74,9 @@ I hope you will with me, Waiting for your response.
 Thanks and Regards,
 Md. Arman Sharif
 
-
+order
+----------------------------------------
+always fill attechment dont blank this kisu na thakleo ontoto ekta SS diye dite hobe
         </textarea>
       </div>
     </div>
