--- a/fiverr.html
+++ b/fiverr.html
@@ -14,9 +14,11 @@
         <textarea cols="200" rows="20" class="form-control">                                                      
 Fiverr Rules
 ---------------------------------------
-Don's Share Contact Information
-Don's blank delivery
+Don't Share Contact Information
+Don't blank delivery
+Don't use auto refresh extension 
 Don't rude behave
+Use Quick Reply
 Don't forget to share your experiance.
 Identity == NID info
 Profile Picture == Smily Face
