--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                   <a href="./live_exam_js.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">live_exam_js</a>
                   <a href="./fiverr.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Fiverr</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
+                  <a href="./search_input_select_ajax.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">search_input_select_ajax</a>
 
 
 
