--- a/search_input_select_ajax.html
+++ b/search_input_select_ajax.html
@@ -24,7 +24,7 @@ public function searchPatients(Request $request)
 }
 
 <input type="text" id="mobileSearch" placeholder="Search by Mobile Number">
-<select id="patientDropdown" class="form-select" aria-label="Default select example" required>
+<select name="patient_id" id="patientDropdown" class="form-select" aria-label="Default select example" required>
     <option hidden value="">Choose ...</option>
 </select>
 
