--- a/blade.html
+++ b/blade.html
@@ -13,6 +13,10 @@
       <div class="row">
         <textarea cols="200" rows="20" class="form-control"> 
 {{ config('app.name') }}
+{{'webDevelopment'==request()->path()?'active':''}}
+{{Str::limit($country1->name,3)}}
+{{ Auth::user()->name }}
+@php $order = \App\Models\Order::where('course_id', $Course->id)->where('user_id',Auth::user()->id)->first(); @endphp
           
 @if (Route::has('login'))
 <ul class="navbar-nav ms-auto">
@@ -34,11 +38,9 @@
     @endauth
 </ul>
 @endif
-          
-{{Str::limit($country1->name,3)}}
+
 value="{{ Auth::user()->id }}"
 value="{{Auth::check() ? Auth::user()->name : ''}}"
-{{ Auth::user()->name }}
 
 <div class="row">
     @foreach($courses as $course)
