--- a/blade.html
+++ b/blade.html
@@ -17,6 +17,9 @@
 {{Str::limit($country1->name,3)}}
 {{ Auth::user()->name }}
 @php $order = \App\Models\Order::where('course_id', $Course->id)->where('user_id',Auth::user()->id)->first(); @endphp
+{{$data->updated_at->format('h:i A D j M Y')}}
+
+
           
 @if (Route::has('login'))
 <ul class="navbar-nav ms-auto">
