--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
                   <a href="./vs_code.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">vs_code</a>
                   <a href="./live_exam_js.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">live_exam_js</a>
                   <a href="./fiverr.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Fiverr</a>
-                  <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
+                  <a href="./java_script.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">java_script</a>
                   <a href="./search_input_select_ajax.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">search_input_select_ajax</a>
-
+                  <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
                   
