--- a/seeder_faker.html
+++ b/seeder_faker.html
@@ -35,6 +35,19 @@ public function run(){
 }
           
 php artisan db:seed
+
+1-------------------------------------------------------------------------
+$areas = [
+    ['name'=>'Arman','created_at'=>now() ], 
+    ['name'=>'Sharif','created_at'=>now() ],
+];
+Area::insert($areas);
+2-------------------------------------------------------------------------
+User::create([
+    'name' => 'Super Admin',
+    'email' => 'superadmin@gmail.com',
+    'password' => Hash::make('12345678')
+]);
           
         </textarea>
       </div>
