--- a/migration.html
+++ b/migration.html
@@ -16,7 +16,7 @@
 $table->foreignId('devision_id')->constrained('devisions')->nullable();
 $table->integer('quantity');
 $table->integer('damage')->default(0)->nullable();
-$table->boolean('status')->default(0)->nullable();
+$table->boolean('status')->default(0)->nullable()->comment('Active or Inactive');
 $table->decimal('amount',12,2)->nullable();
 $table->enum('status',['active','inactive'])->default('inactive');
 $table->float('discount');
