--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <div class="col-12" style="text-aling: justify;">
 
                   <a href="./command.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Command</a>
+                  <a href="./mysql.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">My SQL</a>
                   <a href="./migration.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Migration</a>
                   <a href="./seeder_faker.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Seeder & Faker</a>
                   <a href="./route.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Route</a>
