--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                   <a href="./fiverr.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Fiverr</a>
                   <a href="./java_script.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">java_script</a>
                   <a href="./search_input_select_ajax.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">search_input_select_ajax</a>
+                  <a href="./work_without_reload.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">work_without_reload</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
