--- a/migration.html
+++ b/migration.html
@@ -12,6 +12,7 @@
     <div class="container pt-4">
       <div class="row">
         <textarea cols="200" rows="20" class="form-control"> 
+migration er time ta important
           
 $table->foreignId('devision_id')->constrained('devisions')->nullable();
 $table->integer('quantity');
