--- a/command.html
+++ b/command.html
@@ -15,7 +15,15 @@
 composer create-project laravel/laravel ProjectName
 composer create-project laravel/laravel:^8.0 ProjectName
 cd ProjectName
+php -v
 php artisan --version
+Laravel 5.8 ----------- PHP >= 7.1.3
+Laravel 6 ------------- PHP  7.2 - 8.0
+Laravel 7 ------------- PHP  7.2 - 8.0
+Laravel 8 ------------- PHP  7.3 - 8.1
+Laravel 9 ------------- PHP  8.0 - 8.2
+Laravel 10 ----------- PHP  8.1 - 8.2
+Laravel 11 ----------- PHP  8.2     
 php artisan make:migration create_profile_table
 php artisan make:migration create_profile_table --create=profile
 php artisan migrate
