--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                   <a href="./work_without_reload.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">work_without_reload</a>
                   <a href="./soft_delete.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">soft_delete</a>
                   <a href="./jquery_chosen.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">jquery_chosen</a>
+                  <a href="./debugbar.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">debugbar</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
