--- a/cache_clear.html
+++ b/cache_clear.html
@@ -16,6 +16,14 @@ php artisan cache:clear
 php artisan route:cache
 php artisan view:clear
 php artisan config:cache 
+php artisan event:clear
+
+php artisan optimize:clear
+
+Route::get('/clear-cache-all', function() {
+    Artisan::call('cache:clear');
+    dd("Cache Clear All");
+});
 
         </textarea>
       </div>
