--- a/orm.html
+++ b/orm.html
@@ -11,6 +11,9 @@
   <body>
     <div class="container pt-4">
       <div class="row">
+<a href="https://www.itsolutionstuff.com/post/laravel-10-one-to-many-eloquent-relationship-tutorialexample.html" class="btn btn-outline-primary" target="_blank">One to Many</a>
+<a href="https://www.itsolutionstuff.com/post/laravel-10-has-many-through-relationship-exampleexample.html" class="btn btn-outline-primary" target="_blank">Has Many Through</a>
+<a href="https://www.itsolutionstuff.com/post/laravel-10-many-to-many-eloquent-relationship-tutorialexample.html" class="btn btn-outline-primary" target="_blank">Many to Many</a>
         <textarea cols="200" rows="20" class="form-control"> 
 writers
 ---------------
