--- a/email_verification.html
+++ b/email_verification.html
@@ -11,7 +11,11 @@
   <body>
     <div class="container pt-4">
       <div class="row">
-        <textarea cols="200" rows="20" class="form-control">  
+        <textarea cols="200" rows="20" class="form-control"> 
+forget password
+https://www.itsolutionstuff.com/post/laravel-10-custom-forgot-password-exampleexample.html#google_vignette
+
+          
 -> Cpanel -> Email Accounts -> create account with password 
           
 web.php
