--- a/blade.html
+++ b/blade.html
@@ -24,6 +24,13 @@ cache not working
 $imagePath = public_path('path/to/image.jpg');
 return response()->file($imagePath)->header('Cache-Control', 'no-cache, must-revalidate');
 
+                    <iframe 
+                        src="{{ str_replace('youtu.be', 'www.youtube.com/embed', $data->youtube_share_link) }}" 
+                        style="width:100%;height:350px;" 
+                        class="rounded"
+                        allowfullscreen
+                    ></iframe>
+          
 {{ str_replace('watch?v=', 'embed/', $data->video) }}
 don't download image
 <img class="animated slider-1-1" src="" alt="" oncontextmenu="return false;">
