--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                   <a href="./jquery_chosen.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">jquery_chosen</a>
                   <a href="./debugbar.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">debugbar</a>
                   <a href="./wordpress.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">wordpress</a>
+                  <a href="./scroll_top.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">scroll_top</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
