--- a/command.html
+++ b/command.html
@@ -44,6 +44,7 @@ php artisan db:seed --class=CreateUsersSeeder
 composer require brian2694/laravel-toastr
 php artisan serve
 composer update --no-scripts
+php artisan storage:link
 
 npm install
 npm run dev
